5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4132/executions/1800_2572.log
== SUBMITION (2019-06-12 12:41:38) 
-- CODE:
from numpy import *

v = array(eval(input("Digite: ")))
par=0
aux=0
for i in v:
	if (i%2==0)
		par+=1
		
aux = size(v)-par
x=(aux,dtype=int)
for i in range(size(v)):
	if not(v[i]%2==0)
		x[i]=v[i]
print(x)
-- EXECUTION TIME:
0.575524
-- ERROR:
  File "/home/codebench/codes/1800/2572/main.py", line 7
    if (i%2==0)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:41:40) 
-- CODE:
from numpy import *

v = array(eval(input("Digite: ")))
par=0
aux=0
for i in v:
	if (i%2==0)
		par+=1
		
aux = size(v)-par
x=(aux,dtype=int)
for i in range(size(v)):
	if not(v[i]%2==0)
		x[i]=v[i]
print(x)
-- ERROR:
File "XXXX", line 7
    if (i%2==0)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:42:16) 
-- CODE:
from numpy import *

v = array(eval(input("Digite: ")))
par=0
aux=0
for i in range(size(v)):
	if (v[i]i%2==0)
		par+=1
		
aux = size(v)-par
x=(aux,dtype=int)
for i in range(size(v)):
	if not(v[i]%2==0)
		x[i]=v[i]
print(x)
-- ERROR:
File "XXXX", line 7
    if (v[i]i%2==0)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:42:26) 
-- CODE:
from numpy import *

v = array(eval(input("Digite: ")))
par=0
aux=0
for i in range(size(v)):
	if (v[i]i%2==0):
		par+=1
		
aux = size(v)-par
x=(aux,dtype=int)
for i in range(size(v)):
	if not(v[i]%2==0):
		x[i]=v[i]
print(x)
-- ERROR:
File "XXXX", line 7
    if (v[i]i%2==0):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:42:37) 
-- CODE:
from numpy import *

v = array(eval(input("Digite: ")))
par=0
aux=0
for i in range(size(v)):
	if (v[i]%2==0):
		par+=1
		
aux = size(v)-par
x=(aux,dtype=int)
for i in range(size(v)):
	if not(v[i]%2==0):
		x[i]=v[i]
print(x)
-- ERROR:
File "XXXX", line 11
    x=(aux,dtype=int)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:43:14) 
-- CODE:
from numpy import *

v = array(eval(input("Digite: ")))
par=0
aux=0
for i in range(size(v)):
	if (v[i]%2==0):
		par+=1
		
aux = size(v)-par
x=(aux,dtype=int)
for i in range(size(v)):
	if not(v[i]%2==0):
		x[i]=v[i]
print(x)
-- EXECUTION TIME:
0.939225
-- ERROR:
  File "/home/codebench/codes/1800/2572/main.py", line 11
    x=(aux,dtype=int)
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:43:16) 
-- CODE:
from numpy import *

v = array(eval(input("Digite: ")))
par=0
aux=0
for i in range(size(v)):
	if (v[i]%2==0):
		par+=1
		
aux = size(v)-par
x=(aux,dtype=int)
for i in range(size(v)):
	if not(v[i]%2==0):
		x[i]=v[i]
print(x)
-- ERROR:
File "XXXX", line 11
    x=(aux,dtype=int)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:43:29) 
-- CODE:
from numpy import *

v = array(eval(input("Digite: ")))
par=0
aux=0
for i in range(size(v)):
	if (v[i]%2==0):
		par+=1
		
aux = size(v)-par
x=zeros(aux,dtype=int)
for i in range(size(v)):
	if not(v[i]%2==0):
		x[i]=v[i]
print(x)
-- EXECUTION TIME:
1.09587
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2572/main.py", line 14, in <module>
    x[i]=v[i]
IndexError: index 3 is out of bounds for axis 0 with size 2

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:44:22) 
-- CODE:
from numpy import *

v = array(eval(input("Digite: ")))
par=0
aux=0
for i in range(size(v)):
	if (v[i]%2==0):
		par+=1
		
aux = size(v)-par
x=zeros(aux,dtype=int)
for i in range(size(v)):
	if not(v[i]%2==0):
		x[i]=v[i]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:44:36) 
-- CODE:
from numpy import *

v = array(eval(input("Digite: ")))
par=0
aux=0
for i in range(size(v)):
	if (v[i]%2==0):
		par+=1
		
aux = size(v)-par
x=zeros(aux,dtype=int)
for i in range(size(v)):
	if not(v[i]%2==0):
		x[i]=v[i]
print(x)
-- EXECUTION TIME:
0.933603
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2572/main.py", line 14, in <module>
    x[i]=v[i]
IndexError: index 3 is out of bounds for axis 0 with size 2

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:45:09) 
-- CODE:
from numpy import *

v = array(eval(input("Digite: ")))
par=0
aux=0
for i in range(size(v)):
	if (v[i]%2==0):
		par+=1
		
aux = size(v)-par
x=zeros(aux,dtype=int)
for i in range(size(v)):
	if not(v[i]%2==0):
		x[i]=v[i]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:45:58) 
-- CODE:
from numpy import *

v = array(eval(input("Digite: ")))
par=0
aux=0
for i in range(size(v)):
	if (v[i]%2==0):
		par+=1
		
aux = size(v)-par
x=zeros(aux,dtype=int)
for i in range(size(x)):
	if not(v[i]%2==0):
		x[i]=v[i]
print(x)
-- EXECUTION TIME:
0.964693
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561        0]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[       0        0        0 12475981]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
Digite: [31874903]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:45:59) 
-- CODE:
from numpy import *

v = array(eval(input("Digite: ")))
par=0
aux=0
for i in range(size(v)):
	if (v[i]%2==0):
		par+=1
		
aux = size(v)-par
x=zeros(aux,dtype=int)
for i in range(size(x)):
	if not(v[i]%2==0):
		x[i]=v[i]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:49:08) 
-- CODE:
from numpy import *

v = array(eval(input("Digite: ")))
par=0
aux=0
for i in range(size(v)):
	if (v[i]%2==0):
		par+=1
		
aux = size(v)-par
x=zeros(aux,dtype=int)
for i in range(size(v)):
	if not(v[i]%2==0):
		x[i]=v[i]
print(x)
-- EXECUTION TIME:
1.07437
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2572/main.py", line 14, in <module>
    x[i]=v[i]
IndexError: index 3 is out of bounds for axis 0 with size 2

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:49:10) 
-- CODE:
from numpy import *

v = array(eval(input("Digite: ")))
par=0
aux=0
for i in range(size(v)):
	if (v[i]%2==0):
		par+=1
		
aux = size(v)-par
x=zeros(aux,dtype=int)
for i in range(size(v)):
	if not(v[i]%2==0):
		x[i]=v[i]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:52:06) 
-- CODE:
from numpy import *

v = array(eval(input("Digite: ")))
par=0
aux=0
for i in range(size(v)):
	if (v[i]%2==0):
		par+=1
		
aux = size(v)-par
x=zeros(aux,dtype=int)
for i in range(size(v)-par):
	if not(v[i]%2==0):
		x[i]=v[i]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:52:11) 
-- CODE:
from numpy import *

v = array(eval(input("Digite: ")))
par=0
aux=0
for i in range(size(v)):
	if (v[i]%2==0):
		par+=1
		
aux = size(v)-par
x=zeros(aux,dtype=int)
for i in range(size(v)-par):
	if not(v[i]%2==0):
		x[i]=v[i]
print(x)
-- EXECUTION TIME:
1.09273
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561        0]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[       0        0        0 12475981]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:52:13) 
-- CODE:
from numpy import *

v = array(eval(input("Digite: ")))
par=0
aux=0
for i in range(size(v)):
	if (v[i]%2==0):
		par+=1
		
aux = size(v)-par
x=zeros(aux,dtype=int)
for i in range(size(v)-par):
	if not(v[i]%2==0):
		x[i]=v[i]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:53:03) 
-- CODE:
from numpy import *

v = array(eval(input("Digite: ")))
par=0
aux=0
for i in range(size(v)):
	if (v[i]%2==0):
		par+=1
		
aux = size(v)-par
x=zeros(aux,dtype=int)
for j in aux:
	if not(v[i]%2==0):
		x[j]=v[j]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:53:31) 
-- CODE:
from numpy import *

v = array(eval(input("Digite: ")))
par=0
aux=0
for i in range(size(v)):
	if (v[i]%2==0):
		par+=1
		
aux = size(v)-par
x=zeros(aux,dtype=int)
for j in range(aux):
	if not(v[i]%2==0):
		x[j]=v[j]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:53:44) 
-- CODE:
from numpy import *

v = array(eval(input("Digite: ")))
par=0
aux=0
for i in range(size(v)):
	if (v[i]%2==0):
		par+=1
		
aux = size(v)-par
x=zeros(aux,dtype=int)
for j in range(aux):
	if not(v[j]%2==0):
		x[j]=v[j]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:54:16) 
-- CODE:
from numpy import *

v = array(eval(input("Digite: ")))
par=0
aux=0
for i in range(size(v)):
	if (v[i]%2==0):
		par+=1
		
aux = size(v)-par
x=zeros(aux,dtype=int)
for j in range(size(v)):
	if not(v[j]%2==0):
		x[j]=v[j]
print(x)
-- EXECUTION TIME:
0.91686
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2572/main.py", line 14, in <module>
    x[j]=v[j]
IndexError: index 3 is out of bounds for axis 0 with size 2

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:54:18) 
-- CODE:
from numpy import *

v = array(eval(input("Digite: ")))
par=0
aux=0
for i in range(size(v)):
	if (v[i]%2==0):
		par+=1
		
aux = size(v)-par
x=zeros(aux,dtype=int)
for j in range(size(v)):
	if not(v[j]%2==0):
		x[j]=v[j]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:55:30) 
-- CODE:
from numpy import *

v = array(eval(input("Digite: ")))
par=0
aux=0
for i in range(size(v)):
	if (v[i]%2==0):
		par+=1
		
aux = size(v)-par
x=zeros(aux,dtype=int)
for j in range(size(v)):
	if not(v[j]%2==0):
		x[j]=v[j]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:01:56) 
-- CODE:
from numpy import *

v = array(eval(input("Digite: ")))
impar=0
aux=0
for i in range(size(v)):
	if not(v[i]%2==0):
		impar+=1
		
x=zeros(impar,dtype=int)
for j in range(size(v)):
	if not(v[j]%2==0):
		x[j]=v[j]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:05:13) 
-- CODE:
from numpy import *

v = array(eval(input("Digite: ")))
impar=0
aux=0
for i in range(size(v)):
	if not(v[i]%2==0):
		impar+=1
		
x=zeros(impar,dtype=int)
for j in range(size(v)):
	if not(v[j]%2==0):
		x[i]=v[j]
		i+=1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:05:27) 
-- CODE:
from numpy import *

v = array(eval(input("Digite: ")))
impar=0
aux=0
for i in range(size(v)):
	if not(v[i]%2==0):
		impar+=1
		
x=zeros(impar,dtype=int)
for j in range(size(v)):
	if not(v[j]%2==0):
		x[i]=v[j]
		k+=1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:05:48) 
-- CODE:
from numpy import *

v = array(eval(input("Digite: ")))
impar=0
aux=0
for i in range(size(v)):
	if not(v[i]%2==0):
		impar+=1
		
x=zeros(impar,dtype=int)
for j in range(size(v)):
	if not(v[j]%2==0):
		x[k]=v[j]
		k+=1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:06:01) 
-- CODE:
from numpy import *

v = array(eval(input("Digite: ")))
impar=0
k=0
for i in range(size(v)):
	if not(v[i]%2==0):
		impar+=1
		
x=zeros(impar,dtype=int)
for j in range(size(v)):
	if not(v[j]%2==0):
		x[k]=v[j]
		k+=1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:06:22) 
-- CODE:
from numpy import *

v = array(eval(input("Digite: ")))
impar=0
k=0
for i in range(size(v)):
	if not(v[i]%2==0):
		impar+=1
		
x=zeros(impar,dtype=int)
for j in range(size(v)):
	if not(v[j]%2==0):
		x[k]=v[j]
		k+=1
print(x)
-- EXECUTION TIME:
1.68396
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[12475981 75942785 91875987 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:06:22) 
-- CODE:
from numpy import *

v = array(eval(input("Digite: ")))
impar=0
k=0
for i in range(size(v)):
	if not(v[i]%2==0):
		impar+=1
		
x=zeros(impar,dtype=int)
for j in range(size(v)):
	if not(v[j]%2==0):
		x[k]=v[j]
		k+=1
print(x)
-- EXECUTION TIME:
2.62808
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[12475981 75942785 91875987 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
